Fixed styling problem where content was extending outside parent bounds on mobile

--- a/styles/ActivitySearchForm.module.scss
+++ b/styles/ActivitySearchForm.module.scss
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: center;
   padding: 1.5rem 3rem;
-  width: 95%;
+  width: 90%;
   max-width: 940px;
 }
 
