--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,7 @@
 
 html,
 body {
+  width: 100vw;
   padding: 0;
   margin: 0;
   font-family: "Maven Pro", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
